# create_idiom_dataset

./: .gitignore  README.md  pyproject.toml
idiom_dataset/: README.md  data.jsonl  original_and_translated_data.jsonl
idiom_dataset/idiom_freqs/: idiom_frequencies.csv  translated_idiom_frequencies.csv
idiom_dataset/idiom_graphs/: nno_idioms_flat_sequence_graph.json  nno_idioms_sequence_graph.json  nob_idioms_flat_sequence_graph.json  nob_idioms_sequence_graph.json  translated_nno_idioms_flat_sequence_graph.json  translated_nno_idioms_sequence_graph.json  translated_nob_idioms_flat_sequence_graph.json  translated_nob_idioms_sequence_graph.json
notebooks/: dataset_metadata.ipynb
src/create_idiom_dataset/: __init__.py  __main__.py  frequency_curation.py  idiom_completion_task.py  idiom_graphs.py  read_idiom_collection.py  translation.py  utils.py
tests/create_idiom_dataset/idiom_graphs/: test_create_sequence_graph.py
